# video-capture-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  release-please-config.json  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  conventional-commit.yml  publish.yml  release-please.yml  update-homebrew.yml
docs/: development.md  permissions.md  release.md  tools.md  troubleshooting.md
scripts/: release_audit.py  release_coordinator.py
tests/: test_backends_android.py  test_backends_ios.py  test_backends_macos.py  test_extractor.py  test_orientation.py  test_pointer.py  test_process_registry.py  test_release_pipeline.py  test_server_metadata.py  test_session.py  test_version.py  test_window.py
video_capture_mcp/: __init__.py  extractor.py  orientation.py  paths.py  pointer.py  process_registry.py  server.py  session.py  version.py  window.py
video_capture_mcp/backends/: __init__.py  android.py  ios.py  macos.py
